<resources>
    <string name="app_name">shaikh Sha3ban</string>
    <string name="advice">advice</string>
    <string name="attendance">attendance</string>
    <string name="community">community</string>>


    <!--FMT as a notation for formatted string-->
    <string name="FMT_welcomeBackMes">Hello %s, welcome back</string>

    <string name="mes_passwordChanged">password changed successfully</string>
    <string name="mes_nameChanged">name changed successfully</string>
    <string name="mes_resetEmailSent">The reset email is send successfully</string>
    <string name="mes_signedInSuccess">Signed in successfully</string>
    <string name="mes_signingUp_indicator">Signing up</string>


    <!--strings for dialogs, d stands for dialog-->
    <string name="dTitle_changePass">Changing password</string>
    <string name="dAction_cancel">Cancel</string>
    <string name="dAction_change">Change</string>

    <!--dMes stands for dialog message-->

    <string name="post_to_community">post to community</string>
    <string name="login">login</string>
    <string name="profile">profile</string>
    <string name="by">by: </string>
    <string name="change_password">Change password</string>
    <string name="sign_out">Sign out</string>
    <string name="evaluation">evaluation</string>
    <string name="mes_phoneChanged">phone updated successfully</string>
    <string name="dTitle_editRatings">Edit ratings</string>
    <string name="remembering">remembering</string>
    <string name="performance">performance</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">No account yet? Create one</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="name">Name</string>
    <string name="phone">phone</string>
    <string name="today">today</string>

</resources>
